Fixed line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,7 @@ a:hover {
   position: relative;
   padding-left: 2.6rem;
   max-height: 400px;
+  width: 100%;
   overflow: hidden;
 }
 
